# fugue-causal

./: CITATION.cff  CLAUDE.md  Cargo.toml  Makefile  README.md  RELEASE_NOTES.md  SPEC.md  V1_0_ROADMAP.md  book.toml
.github/workflows/: ci.yml  pages.yml
benches/: inference_benchmarks.rs
book/: SUMMARY.md  examples.md  faq.md  introduction.md  quick-start.md  tutorials.md
book/src/: SUMMARY.md  api-reference.md  faq.md  introduction.md  quick-start.md  theory.md
docs/: book.toml
docs/src/: SUMMARY.md  introduction.md  quick-start.md
examples/: ate_basic.rs  cate_heterogeneous.rs  quantum_importance.rs  synthesis_parameters.rs
src/: bootstrap.rs  checkpoint.rs  cross_fit.rs  estimand.rs  fugue_integration.rs  identifier.rs  lib.rs  nuisance.rs  posterior.rs
tests/: integration.rs
