[package]
name = "fugue-causal"
version = "1.0.0"
edition = "2021"
authors = ["Alex Nodeland <alex@ournature.studio>"]
license = "MIT"
description = "Bayesian causal inference via generalized Bayes (Gibbs posteriors) with Neyman-orthogonal identifiers"
repository = "https://github.com/alexnodeland/fugue-causal"
keywords = ["causal-inference", "bayesian", "probabilistic-programming", "generalized-bayes"]
categories = ["science", "mathematics"]

[dependencies]
ndarray = "0.15"
rand = { version = "0.8", features = ["small_rng"] }
rand_distr = "0.4"
rayon = "1.7"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

[dev-dependencies]
criterion = "0.5"

[profile.release]
opt-level = 3
lto = true
